[dynamodb] Optimize consumed read capacity
We optimize consumed read capacity by limiting the queries to read at
most page size entries at once. This should significantly reduce the
consumed read capacity in cases where the persistence service is queried
with page size, as the default before was to read up to 1MB of data.

Signed-off-by: Sami Salonen <ssalonen@gmail.com>